# VIASD_demo

./: README.md  compute_metrics.py  eval_qa.py  inference_via_sd.py  pyproject.toml
examples/: quickstart_numpy.py  real_model_gemma2.py
scripts/: download_model.py
tests/: conftest.py  test_bayes_opt.py  test_dimr.py  test_distances.py  test_e2e.py  test_kl_cost.py  test_kv_cache.py  test_mixture.py  test_model_interfaces.py  test_slim_verifier.py  test_verification.py
via_sd/: __init__.py
via_sd/baseline/: __init__.py  speculative_cascades.py
via_sd/core/: __init__.py  _numpy_utils.py  dimr.py  distances.py  kl_cost.py  mixture.py  slim_verifier.py  verification.py
via_sd/models/: __init__.py  modeling_gemma2.py  modeling_llama.py  swift_utils.py
via_sd/torch/: __init__.py  dimr_bayes.py  interface.py  model_loading.py  slim_verifier.py
